--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,2 @@
-//
+@import url(https://fonts.googleapis.com/css?family=Raleway:300.400.600);
+@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
